--- a/analysis/001_overview.Rmd
+++ b/analysis/001_overview.Rmd
@@ -120,8 +120,8 @@ n_ta_oa <- ta_oa_inst |>
 ```
 
 Between 2018 and 2022, a total of `r n_hybrid_jns` out of `r n_hybrid_jns_all` hybrid journals in transformative agreements published at least one open access article under a Creative Commons license.
-During this period, these hybrid journals provided open access to `r n_oa` out of `r n_total` articles, representing a five-year hybrid open access uptake of `r n_oa / n_total * 100`%.
-First authors affiliated with institutions that had a transformative agreement in place at the time of publication, which indicates that they could make use of such agreements, contributed `r n_ta_oa` open access articles to the total.
+During this period, these hybrid journals provided open access to `r n_oa` out of `r n_total` articles, representing a five-year open access proportion of `r n_oa / n_total * 100`%.
+Authors who could make use of transformative agreements at the time of publication contributed `r n_ta_oa` open access articles to the total.
 
 
 ```{r area_oa_over_the_years}
@@ -269,7 +269,7 @@ In 2022, 25% of hybrid journals (n = `r oa_jn_box_df |> filter(cr_year == "2022"
 These journals were, on average, smaller (M = `r oa_jn_box_df |> filter(cr_year == "2022", prop >= 0.5) |> pull(n) |> mean()`, SD = `r oa_jn_box_df |> filter(cr_year == "2022", prop >= 0.5) |> pull(n) |> sd()`) than those with an open access share below 50% (M = `r oa_jn_box_df |> filter(cr_year == "2022", prop <= 0.5) |> pull(n) |> mean()`, SD = `r oa_jn_box_df |> filter(cr_year == "2022", prop <= 0.5) |> pull(n) |> sd()`). 
 Notable exception of large journals with an above-average open access proportion were Physical Review D, a high-energy physics journal covered by the SCOAP3 consortium that provided open access to `r oa_jn_box_df |> filter(cr_year == "2022", issn_l == "2470-0010") |> pull(oa_all)` out of `r oa_jn_box_df |> filter(cr_year == "2022", issn_l == "2470-0010") |> pull(n)` articles in 2022, Astronomy and Physics (`r oa_jn_box_df |> filter(cr_year == "2022", issn_l == "0004-6361") |> pull(oa_all)` out of `r oa_jn_box_df |> filter(cr_year == "2022", issn_l == "0004-6361") |> pull(n)` articles in 2022 were open access), which shifted to a subscribe to open business model for all accepted articles as of April 2022, the Journal of Fluid Mechanics (`r oa_jn_box_df |> filter(cr_year == "2022", issn_l == "0022-1120") |> pull(oa_all)` of `r oa_jn_box_df |> filter(cr_year == "2022", issn_l == "0022-1120") |> pull(n)` articles in 2022 were open access) and Bioinformatics (`r oa_jn_box_df |> filter(cr_year == "2022", issn_l == "1367-4803") |> pull(oa_all)` out of `r oa_jn_box_df |> filter(cr_year == "2022", issn_l == "1367-4803") |> pull(n)` articles in 2022 were open access), which flipped to full open access as of January 2023.
 
-When comparing the impact of open access trough transformative agreements across journals, it shows that for many journals these agreements have been a significant contributor to the growth of open access over the years (Figure 2D). 
+When comparing the impact of open access trough transformative agreements across journals, it shows that for many journals these agreements substantially contributed to the growth of open access over the years (Figure 2D). 
 Examples of such journals include those with a scope on specific countries or regions, where also transformative agreements were implemented. 
 For instance, in 2022, the Germany-based journals Zeitschrift für Erziehungswissenschaft and Zeitschrift für Politikwissenschaft, as well as the Scandinavian Political Studies adressing the Nordic countries, achieved an overall open access uptake of more than 90% just through transformative agreements. 
 Despite the rise in transformative agreements, it is worth noting that other means of publishing open access in hybrid journals remained common. 
@@ -447,16 +447,32 @@ publisher_league_tbl |>
   ))
 ```
 
-Analysing hybrid open access across publishers between 2018 and 2022 reveals a large market concentration among a small number of publishers. 
-Although `r length(unique(jn_ind_jct_all$esac_publisher))` publishers offered transformative agreements, the three major commercial publishers Elsevier, Springer Nature, and Wiley, accounted for `r publisher_league_tbl  |> filter(publisher == "Wiley") |> pull(jn_cum) * 100`% of total article volume published (see Table ).
+Analysing hybrid open access across publishers between 2018 and 2022 reveals a large market concentration. 
+Although `r length(unique(jn_ind_jct_all$esac_publisher))` publishers offered transformative agreements, the big three commercial publishers Elsevier, Springer Nature, and Wiley, accounted for `r publisher_league_tbl  |> filter(publisher == "Wiley") |> pull(jn_cum) * 100`% of total article volume published (see Table ).
 Together, they published `r publisher_league_tbl  |> filter(publisher != "Other") |> pull(oa_total) |> sum()` open access articles, representing `r publisher_league_tbl  |> filter(publisher == "Wiley") |> pull(oa_cum) * 100`% of the open access articles in hybrid journals.
 Elsevier, Springer Nature, and Wiley made `r publisher_league_tbl  |> filter(publisher != "Other") |> pull(ta_oa_total) |> sum()` articles open access in hybrid journals through transformative agreements, resulting in an even larger market share of `r publisher_league_tbl  |> filter(publisher == "Wiley") |> pull(ta_oa_cum)*100`%.
 However, there are differences among the three large publishers. Although Elsevier published the largest volume of articles (n = `r publisher_league_tbl  |> filter(publisher == "Elsevier") |> pull(publisher_total)`, `r publisher_league_tbl  |> filter(publisher == "Elsevier") |> pull(cum)*100`%), it published a relatively low number of open access articles, including those that can be associated with transformative agreements.
-In contrast, Springer Nature and Wiley provided open access to a much larger proportion of their articles (`r (publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(oa_total)) / (publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(publisher_total)) * 100`% of Springer Nature articles and `r (publisher_league_tbl  |> filter(publisher == "Wiley") |> pull(oa_total)) / (publisher_league_tbl  |> filter(publisher == "Wiley") |> pull(publisher_total)) * 100`% of Wiley articles were open acccess), leading to much higher open access market shares (`r publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(oa_perc)*100`% Springer Nature resp. `r publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(oa_perc)*100`% Wiley).
-This  difference can mainly be attributed to transformative agreements, as both publishers made the majority of their open access articles available through such deals (Springer Nature `r ((publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(ta_oa_total)) / (publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(oa_total)) * 100)`% resp. Wiley `r (publisher_league_tbl  |> filter(publisher == "Wiley") |> pull(ta_oa_total)) / (publisher_league_tbl  |> filter(publisher == "Wiley") |> pull(oa_total)) * 100`%).
+In contrast, Springer Nature and Wiley provided open access to a larger proportion of their articles (`r (publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(oa_total)) / (publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(publisher_total)) * 100`% of Springer Nature articles and `r (publisher_league_tbl  |> filter(publisher == "Wiley") |> pull(oa_total)) / (publisher_league_tbl  |> filter(publisher == "Wiley") |> pull(publisher_total)) * 100`% of Wiley articles were open acccess), leading to higher open access market shares (`r publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(oa_perc)*100`% Springer Nature resp. `r publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(oa_perc)*100`% Wiley).
+This  difference between Elsevier on the one hand and Springer Nature and Wiley on the other can  be attributed to transformative agreements, as the latter made the majority of their open access articles available through such deals (Springer Nature `r ((publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(ta_oa_total)) / (publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(oa_total)) * 100)`% resp. Wiley `r (publisher_league_tbl  |> filter(publisher == "Wiley") |> pull(ta_oa_total)) / (publisher_league_tbl  |> filter(publisher == "Wiley") |> pull(oa_total)) * 100`%).
 
 
-Figure 2 presents the growth of hybrid open access across publishers by year, highlighting the growth of open articles published under transformative agreements. As can be seen from Figure 2A and 2C 
+Figure 2 takes a closer look into the growth of hybrid open access across publishers by year with a focus on open articles enabled by transformative agreements. 
+Although all publishers show a general long-term trend towards transformative agreements, Figure 2A and 2B indicate that, in particular, the open access share of Wiley's hybrid journal portfolio quadrupled from `r publisher_summary_df |> filter(cr_year == "2018", publisher == "Wiley") |> pull(prop) |> sum()*100`% in 2018 to `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley") |> pull(prop) |> sum()*100`% in 2022 as a result of these agreements. 
+In comparison, the proportion of open access articles Elsevier hybrid journals grew from from `r publisher_summary_df |> filter(cr_year == "2018", publisher == "Elsevier") |> pull(prop) |> sum()*100`% in 2018 to `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Elsevier") |> pull(prop) |> sum()*100`% in 2022. 
+Unlike the other two publishers, Springer Nature started early to offer selected consortia open access agreements for its hybrid journal portfolio ("Springer Compact").
+Data about the Springer compact agreements with large consortia including Max Planck Society, the Swedish Bibsam consortium qnd the Finish	FinELib consortium that ended before start of the trnasofrmative agreement data collection in June 2021.
+ `r publisher_summary_df |> filter(cr_year == "2018", publisher == "Springer Nature") |> pull(prop) |> sum()*100`% Springer Nature excelled in 2018, but gained a slower growth than Wiley, resulting into `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Springer Nature") |> pull(prop) |> sum()*100`% of all articles being open access in Springer Nature hybrid journals in 2022.
+
+
+
+published the less than half of its `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Elsevier") |> pull(value) |> sum()` open access articles in 2022 through transformative agreements (`r publisher_summary_df |> filter(cr_year == "2022", publisher == "Elsevier", type == "ta_oa") |> pull(value) / publisher_summary_df |> filter(cr_year == "2022", publisher == "Elsevier") |> pull(value) |> sum()*100`%).  while `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Springer Nature", type == "ta_oa") |> pull(value) / publisher_summary_df |> filter(cr_year == "2022", publisher == "Springer Nature") |> pull(value) |> sum()*100`% of Springer Nature's grew slower in the last year compared to Wiley, and  `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley", type == "ta_oa") |> pull(value) / publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley") |> pull(value) |> sum()*100`% of Wiley's open access articles could be linked to transformative agreements in 2022. Overall, Wiley published the largest number of open access articles from transformative agreements in 2022 (n = `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley") |> pull(value) |> sum()`), followed by Springer Nature (`r publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley") |> pull(value) |> sum()`) and Elsevier (`r publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley") |> pull(value) |> sum()`). This varying focus resulted into an different overall open access proportion in 2022 -- only 10% of all articles in Elsevier hybrid journals were open access in 2022, compared to published in springer nautre and xx in Wiley hybrid journals. 
+
+The increasing impact of open access through transofmrative agreements can be also obsevered at the journal-level (Figure 2). While no substantial differences between open access enabled through transformative agreements can be seen across Elsevier journals, an growing number of hybrid journals published by Springer Nature and Wiley increased their open access share through these agreements. In 2022, 25% of Springer Nature hybrid journal portfolio comprised journals with an open access proportion of   percent, while Wiley. 
+
+again a glanc eon the jorunals indicates that these ar emore smaller journals focus on a researchers affitialted with a socienty or a language springe rnautre german-speaking didactic journasl whereas in wiley british society tend to 
+across all more smaller like 
+smaller and 
+of journals majority and springe rnature majority oabove 50 % . prominent example BJC 
 
 
 ```{r, fig.asp=1.1}
