--- a/analysis/001_overview.Rmd
+++ b/analysis/001_overview.Rmd
@@ -344,11 +344,13 @@ all_publisher <- publisher_plot_df |>
 publisher_summary_df <- inner_join(oa_publisher, all_publisher) |>
   mutate(prop = value / jn_all)
 
+
 publisher_prop <- ggplot(publisher_summary_df, aes(gsub("^20", "'", as.character(cr_year)), prop, fill = type, group = type)) +
   geom_area() +
   facet_wrap(~publisher, nrow = 1) +
   scale_fill_manual("Hybrid OA", values = c(no_ta = "#b3b3b3a0", ta_oa = "#56B4E9"), labels = c(no_ta = "Other", ta_oa = "Agreement"),  guide = guide_legend(reverse = TRUE)) +
-  scale_y_continuous(expand = expansion(mult = c(0, 0.05)), labels = scales::percent_format()) +
+  scale_y_continuous(expand = expansion(mult = c(0, 0.05)), labels = scales::percent_format(),
+                     breaks = c(0.05, 0.1, 0.15, 0.2, 0.25)) +
   theme_minimal() +
   labs(y = "Hybrid OA Uptake", x = NULL) +
   theme(legend.position="top", legend.justification = "left", axis.text.x = element_blank())
@@ -361,7 +363,7 @@ publisher_boxplot <- publisher_plot_df |>
                      labels = scales::percent) +
   scale_fill_manual("Hybrid OA", values = c(no_ta = "#b3b3b3a0", ta_oa = "#56B4E9"), labels = c(no_ta = "Other", ta_oa = "Agreement")) +
   coord_cartesian(ylim = c(0,0.65)) +
-  facet_wrap(~publisher, nrow = 1) +
+  facet_wrap(~publisher, nrow = 1, scales = "free") +
   labs(y = "OA Uptake\nby Hybrid Journal", x = "Publication Year") +
   theme_minimal() +
     theme(strip.background = element_blank(),
@@ -455,27 +457,7 @@ However, there are differences among the three large publishers. Although Elsevi
 In contrast, Springer Nature and Wiley provided open access to a larger proportion of their articles (`r (publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(oa_total)) / (publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(publisher_total)) * 100`% of Springer Nature articles and `r (publisher_league_tbl  |> filter(publisher == "Wiley") |> pull(oa_total)) / (publisher_league_tbl  |> filter(publisher == "Wiley") |> pull(publisher_total)) * 100`% of Wiley articles were open acccess), leading to higher open access market shares (`r publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(oa_perc)*100`% Springer Nature resp. `r publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(oa_perc)*100`% Wiley).
 This  difference between Elsevier on the one hand and Springer Nature and Wiley on the other can  be attributed to transformative agreements, as the latter made the majority of their open access articles available through such deals (Springer Nature `r ((publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(ta_oa_total)) / (publisher_league_tbl  |> filter(publisher == "Springer Nature") |> pull(oa_total)) * 100)`% resp. Wiley `r (publisher_league_tbl  |> filter(publisher == "Wiley") |> pull(ta_oa_total)) / (publisher_league_tbl  |> filter(publisher == "Wiley") |> pull(oa_total)) * 100`%).
 
-
-Figure 2 takes a closer look into the growth of hybrid open access across publishers by year with a focus on open articles enabled by transformative agreements. 
-Although all publishers show a general long-term trend towards transformative agreements, Figure 2A and 2B indicate that, in particular, the open access share of Wiley's hybrid journal portfolio quadrupled from `r publisher_summary_df |> filter(cr_year == "2018", publisher == "Wiley") |> pull(prop) |> sum()*100`% in 2018 to `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley") |> pull(prop) |> sum()*100`% in 2022 as a result of these agreements. 
-In comparison, the proportion of open access articles Elsevier hybrid journals grew from from `r publisher_summary_df |> filter(cr_year == "2018", publisher == "Elsevier") |> pull(prop) |> sum()*100`% in 2018 to `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Elsevier") |> pull(prop) |> sum()*100`% in 2022. 
-Unlike the other two publishers, Springer Nature started early to offer selected consortia open access agreements for its hybrid journal portfolio ("Springer Compact").
-Data about the Springer compact agreements with large consortia including Max Planck Society, the Swedish Bibsam consortium qnd the Finish	FinELib consortium that ended before start of the trnasofrmative agreement data collection in June 2021.
- `r publisher_summary_df |> filter(cr_year == "2018", publisher == "Springer Nature") |> pull(prop) |> sum()*100`% Springer Nature excelled in 2018, but gained a slower growth than Wiley, resulting into `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Springer Nature") |> pull(prop) |> sum()*100`% of all articles being open access in Springer Nature hybrid journals in 2022.
-
-
-
-published the less than half of its `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Elsevier") |> pull(value) |> sum()` open access articles in 2022 through transformative agreements (`r publisher_summary_df |> filter(cr_year == "2022", publisher == "Elsevier", type == "ta_oa") |> pull(value) / publisher_summary_df |> filter(cr_year == "2022", publisher == "Elsevier") |> pull(value) |> sum()*100`%).  while `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Springer Nature", type == "ta_oa") |> pull(value) / publisher_summary_df |> filter(cr_year == "2022", publisher == "Springer Nature") |> pull(value) |> sum()*100`% of Springer Nature's grew slower in the last year compared to Wiley, and  `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley", type == "ta_oa") |> pull(value) / publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley") |> pull(value) |> sum()*100`% of Wiley's open access articles could be linked to transformative agreements in 2022. Overall, Wiley published the largest number of open access articles from transformative agreements in 2022 (n = `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley") |> pull(value) |> sum()`), followed by Springer Nature (`r publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley") |> pull(value) |> sum()`) and Elsevier (`r publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley") |> pull(value) |> sum()`). This varying focus resulted into an different overall open access proportion in 2022 -- only 10% of all articles in Elsevier hybrid journals were open access in 2022, compared to published in springer nautre and xx in Wiley hybrid journals. 
-
-The increasing impact of open access through transofmrative agreements can be also obsevered at the journal-level (Figure 2). While no substantial differences between open access enabled through transformative agreements can be seen across Elsevier journals, an growing number of hybrid journals published by Springer Nature and Wiley increased their open access share through these agreements. In 2022, 25% of Springer Nature hybrid journal portfolio comprised journals with an open access proportion of   percent, while Wiley. 
-
-again a glanc eon the jorunals indicates that these ar emore smaller journals focus on a researchers affitialted with a socienty or a language springe rnautre german-speaking didactic journasl whereas in wiley british society tend to 
-across all more smaller like 
-smaller and 
-of journals majority and springe rnature majority oabove 50 % . prominent example BJC 
-
-
-```{r, fig.asp=1.1}
+```{r, fig.asp=0.8}
 library(patchwork)
 design = "E
 A
@@ -488,7 +470,7 @@ wrap_plots(
   C = publisher_boxplot,
   design = design,
   guides = "collect",
-  heights = c(0, 0.8, 0.3, 0.8)
+  heights = c(0, 0.4, 0.3, 0.7)
 ) &
   theme(
     legend.position = "top",
@@ -499,3 +481,35 @@ wrap_plots(
     axis.title=element_text(size = 10)) &
     plot_annotation(tag_levels = 'A') 
 ```
+
+
+Figure 2 takes a closer look into the growth of hybrid open access across publishers by year with a focus on open articles enabled by transformative agreements. 
+Although all publishers show a general long-term trend towards transformative agreements, Figure 2A and 2B indicate that, in particular, Wiley's has experienced a substantial increase in its open access share from `r publisher_summary_df |> filter(cr_year == "2018", publisher == "Wiley") |> pull(prop) |> sum()*100`% (n = `r publisher_summary_df |> filter(cr_year == "2018", publisher == "Wiley") |> pull(value) |> sum()`) in 2018 to `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley") |> pull(prop) |> sum()*100`%  (n = `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley") |> pull(value) |> sum()`) in 2022, rperesenting an 4.5-fold increase. 
+In contrast, Elsevier's hybrid journals deonstrated a more modest increase, from `r publisher_summary_df |> filter(cr_year == "2018", publisher == "Elsevier") |> pull(prop) |> sum()*100`% (n = `r publisher_summary_df |> filter(cr_year == "2018", publisher == "Elsevier") |> pull(value) |> sum()`) in 2018 to `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Elsevier") |> pull(prop) |> sum()*100`% (n = `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Elsevier") |> pull(value) |> sum()`) in 2022, which is a relatively low open access share compared to the general trend.
+In 2018, Springer Nature had the largest open access proportion among the three publishers of `r publisher_summary_df |> filter(cr_year == "2018", publisher == "Springer Nature") |> pull(prop) |> sum()*100`% (n = `r publisher_summary_df |> filter(cr_year == "2018", publisher == "Springer Nature") |> pull(value) |> sum()`), but experienced a relatively slower growth, resulting in `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Springer Nature") |> pull(prop) |> sum()*100`% (n = `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Springer Nature") |> pull(value) |> sum()`) of articles being open access in Springer Nature hybrid journals in 2022.
+
+The varying degrees of uptake of open access across the three major publishers can be attributed to distinct approaches to transformative agreements. 
+Springer Nature, for example, began in 2015 offering selected consortia, such as the Max Planck Society, the Swedish Bibsam consortium, and the Finnish FinELib consortium, open access agreements for its hybrid journal portfolio under the name Springer Compact[^springercompact].
+However, these agreements were not included in the data as they concluded prior to the start of the transformative agreement data collection in June 2021. 
+Nonetheless, the results suggest the importance of central agreements for Springer Nature's hybrid open access business over the past five years (Figure 2B).
+In 2022, `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Springer Nature", type == "ta_oa") |> pull(value) / publisher_summary_df |> filter(cr_year == "2022", publisher == "Springer Nature") |> pull(value) |> sum()*100`% (n = `r  publisher_summary_df |> filter(cr_year == "2022", publisher == "Springer Nature", type == "ta_oa") |> pull(value)`) of open access articles in f Springer Nature  hybrid journals were enabled through transformative agreements.
+In the same year, `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley", type == "ta_oa") |> pull(value) / publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley") |> pull(value) |> sum()*100`% (n = `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Wiley", type == "ta_oa") |> pull(value)`) of Wiley's open access articles could be linked to transformative agreements in 2022. 
+In contrast, Elsevier published fewer than half of its open access articles through transformative agreements (n = `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Elsevier", type == "ta_oa") |> pull(value) `; `r publisher_summary_df |> filter(cr_year == "2022", publisher == "Elsevier", type == "ta_oa") |> pull(value) / publisher_summary_df |> filter(cr_year == "2022", publisher == "Elsevier") |> pull(value) |> sum()*100`%).  
+
+```{r}
+pub_75 <- publisher_plot_df |> filter(value > 0) |> mutate(prop = value /jn_all) |> group_by(publisher, type, cr_year) |> summarise(
+  top25 = quantile(prop, 0.75),
+  median = median(prop),
+  top10 = quantile(prop, 0.9))
+```
+
+The increasing trend towards transformative agreements can be also observed at the journal-level (Figure 2).
+While no substantial differences between open access enabled through transformative agreements and other revenue source could observed across Elsevier journals, the distribution of open access across Springer Nature and Wiley hybrid journals indicates that the growth is not limited to a few journals, but extends across the portfolio. 
+In particular, Wiley's upper quantile, which represents the top 25% of journals in terms of the proportion of open access articles from transformative agreements, increased markedly from `r pub_75 |> filter(publisher == "Wiley", type == "ta_oa", cr_year == "2020") |> pull(top25) * 100`% in 2020 to `r pub_75 |> filter(publisher == "Wiley", type == "ta_oa", cr_year == "2022") |> pull(top25) * 100`% in 2022. At the same time, the median proportion grew from `r pub_75 |> filter(publisher == "Wiley", type == "ta_oa", cr_year == "2020") |> pull(median) * 100`% to  `r pub_75 |> filter(publisher == "Wiley", type == "ta_oa", cr_year == "2022") |> pull(median) * 100`%.
+It is interesting to note that a small but increasing number of journals from these two publishers are providing open access to the majority of articles through transformative agreements.
+Wiley recorded `r publisher_plot_df |>  mutate(prop = value / jn_all)  |> filter(cr_year == "2022", prop > 0.5, type == "ta_oa", publisher == "Wiley") |> nrow()` and Springer Nature `r publisher_plot_df |>  mutate(prop = value / jn_all)  |> filter(cr_year == "2022", prop > 0.5, type == "ta_oa", publisher == "Springer Nature") |> nrow()` hybrid journals with an open access share above 50% that could be solely attributed to transformative agreements. 
+Upon inspection, these journals were mainly society or local language journals with a small yearly article volume.
+
+
+
+[^springercompact]: <https://web.archive.org/web/20180414062853id_/http://www.liber2015.org.uk/wp-content/uploads/2015/03/Springer-Compact.pdf> 
