Country plot top 20

--- a/analysis/001_overview.Rmd
+++ b/analysis/001_overview.Rmd
@@ -738,4 +738,133 @@ wrap_plots(
     plot_annotation(tag_levels = 'A') 
 ```
 
+And here's my country analysis. First top 20
+
+```{r coutnry_data_prep}
+country_all <- hoaddata::jn_aff |>
+  filter(!cr_year %in% c(2017, 2023), issn_l != "0027-8424") |>
+  # only with cc
+  filter(issn_l %in% hoaddata::cc_articles$issn_l) |>
+  distinct(issn_l, cr_year, country_code, articles_total) |>
+  group_by(cr_year, country_code) |>
+  summarise(all = sum(articles_total))
+
+country_oa <- hoaddata::cc_articles |>
+  filter(!cr_year %in% c(2017, 2023), issn_l != "0027-8424") |>
+  group_by(cr_year, country_code) |>
+  summarise(oa = n_distinct(doi))
+
+country_codes <- readr::read_csv(here::here("data", "ror_country_codes.csv"))
+country_ta <-  ta_oa_inst |>
+  filter(ta_active == TRUE, !is.na(cc), issn_l != "0027-8424", !cr_year %in%  c("2017", "2023")) |>
+  left_join(country_codes) |>
+  group_by(cr_year, country_code) |>
+  summarise(ta_oa = n_distinct(doi))
+
+country_df <- country_all |>
+  left_join(country_oa, by = c("cr_year", "country_code")) |>
+  left_join(country_ta, by = c("cr_year", "country_code")) |>
+  distinct() |>
+  ungroup() |>
+  mutate(cr_year = as.character(cr_year)) |>
+  mutate(across(c(oa, ta_oa), .fns = ~replace_na(.,0))) |>
+  filter(!is.na(country_code)) |>
+  mutate(
+    country_name = countrycode::countrycode(country_code, origin = "iso2c", destination = "country.name")
+  )
+
+
+# Top 20 in terms of articles published
+top_20 <- country_df |>
+  filter(!is.na(country_code)) |>
+  group_by(country_code, country_name) |>
+  summarise(n = sum(all)) |>
+  arrange(desc(n)) |>
+  head(20) 
+
+## Order of multiples, sort by the most productive (Top 20)
+
+country_multiple_df <- country_df |>
+  mutate(country_name_fct = forcats::fct_other(country_name, keep = top_20$country_name)) |>
+  mutate(country_name_fct = forcats::fct_relevel(country_name_fct, top_20$country_name, "Other")) |>
+  group_by(country_name_fct, cr_year) |>
+  summarise(
+    all_total = sum(all),
+    oa_total = sum(oa),
+    ta_oa_total = sum(ta_oa)
+  ) |>
+  mutate(prop = oa_total / all_total) |>
+  # remove cases where we could not retrieve a country name |>
+  filter(!is.na(country_name_fct))
+
+# Prepare facet heading
+facet_labels <- country_multiple_df |>
+  group_by(country_name_fct) |>
+  summarise(total = sum(all_total)) |>
+  mutate(prop = total / sum(total)) |>
+  ungroup() |>
+  # Highlight Germany
+  mutate(total_string = case_when(
+    total < 1000 ~ as.character(total),
+    total < 1000000 ~ paste0(format(round(total / 1e3, 1), trim = TRUE), "K"),
+    total >= 1000000 ~ paste0(format(round(total / 1e6, 2), trim = TRUE), "M")
+  )) |>
+  mutate(
+    facet_labels = glue::glue(
+      '{country_name_fct}<br>
+      {total_string} | {paste(round(prop * 100, 1), "%")}'
+    )
+  ) |>
+  distinct(country_name_fct, facet_labels)
+
+country_facet_labels <- as.character(facet_labels$facet_labels)
+names(country_facet_labels) <- facet_labels$country_name_fct
+
+top_20_plot_df <- 
+  country_multiple_df |> 
+  mutate(no_ta = oa_total - ta_oa_total) |>
+  rename(ta_oa = ta_oa_total) |>
+  pivot_longer(
+  cols = c(no_ta, ta_oa),
+  values_to = "value",
+  names_to = "type") 
+```
+
+```{r, country_plot, fig.asp=0.8}
+ggplot(top_20_plot_df, aes(
+    gsub("^20", "'", as.character(cr_year)),
+    value / all_total,
+    group = type,
+    fill = type
+  )) +
+  geom_area(stat = "identity") +
+  scale_fill_manual(
+    "Hybrid OA",
+    values = c(no_ta = "#b3b3b3a0", ta_oa = "#56B4E9"),
+    labels = c(no_ta = "Other", ta_oa = "Agreement"),
+    guide = guide_legend(reverse = TRUE)
+  ) +
+  facet_wrap( ~ country_name_fct,
+              nrow = 3,
+              labeller = as_labeller(country_facet_labels)) +
+  scale_y_continuous(
+    labels = scales::percent_format(accuracy = 1L),
+    expand = expansion(mult = c(0, 0.05)),
+    breaks = scales::breaks_extended(4)
+  ) +
+  theme_minimal() +
+  labs(y = "OA Share", x = "2018 - 2022") +
+  theme(
+    legend.position = "top",
+    legend.justification = "right",
+    legend.direction = "horizontal",
+    panel.grid.minor = element_blank(),
+                panel.border = element_rect(color = "grey50", fill = NA),
+    axis.title=element_text(size = 10),
+    strip.text = ggtext::element_markdown(size = 6),
+    plot.subtitle = ggtext::element_markdown(hjust = 0.5),
+    panel.spacing = unit(1, "lines")
+  )
+```
+
 [^springercompact]: <https://web.archive.org/web/20180414062853id_/http://www.liber2015.org.uk/wp-content/uploads/2015/03/Springer-Compact.pdf> 
