--- a/analysis/001_overview.Rmd
+++ b/analysis/001_overview.Rmd
@@ -913,23 +913,30 @@ country_scatter_22 <- country_scatter_df |>
     legend.justification = "left",
     legend.direction = "horizontal")
 
-country_bar <- country_scatter_df |>
+oecd_stats <- readr::read_csv(here::here("data", "oecd_stats.csv"))
+oecd_stats_df <- oecd_stats |>
+  filter(issn_l != "0027-8424", !cr_year %in%  c("2017", "2023")) |>
+  filter(issn_l %in% hoaddata::cc_articles$issn_l) |>
   group_by(cr_year, cat) |>
-  summarise(all = sum(all), oa = sum(oa), ta_oa = sum(ta_oa)) |>
-  mutate(closed = all - oa) |>
-  pivot_longer(cols = c(oa, ta_oa, closed), names_to = "oa_type") |>
-  ggplot(aes(gsub("^20", "'", as.character(cr_year)), value, group = oa_type, fill = oa_type)) +
+  summarise(all = sum(articles, na.rm = TRUE), oa = sum(oa,na.rm = TRUE), ta_oa = sum(ta_oa, na.rm = TRUE)) |>
+  mutate(closed = all - oa,
+         oa_other = oa - ta_oa) |>
+  pivot_longer(cols = c(ta_oa, oa_other, closed), names_to = "oa_type") |>
+  mutate(cat = ifelse(is.na(cat), "Other", cat))
+
+country_bar <- ggplot(oecd_stats_df, aes(gsub("^20", "'", as.character(cr_year)), value, group = oa_type, fill = oa_type)) +
   geom_area() +
   facet_wrap(~ cat) +
-  scale_fill_manual(NULL, values = c(oa = "#b3b3b3a0", ta_oa = "#56B4E9", closed = "#e98b56"),
-    labels = c(oa = "OA", ta_oa = "Agreement", closed = "Closed")) +
+  scale_fill_manual(NULL, values = c(oa_other = "#b3b3b3a0", ta_oa = "#56B4E9", closed = "grey50"),
+                    labels = c(oa_other = "OA Other", ta_oa = "Agreement", closed = "Closed")) +
   theme_minimal() +
   scale_y_continuous(labels =  scales::number_format(big.mark = ",")) +
   theme_minimal() +
   labs(x = "Publication year", y = "Total articles") +
   theme(legend.position = "top",
-    legend.justification = "left",
-    legend.direction = "horizontal")
+        legend.justification = "left",
+        legend.direction = "horizontal")
+
 ```
 
 ```{r country_patch}
